@@ -3,16 +3,22 @@
 
 
 
-docker pull styletang/rocketmq-console-ng
 
 mkdir -p /tmp/rocketmq-console
-docker run -v /tmp/rocketmq-console:/tmp styletang/rocketmq-console-ng cp /rocketmq-console-ng.jar /tmp
+cd /tmp/rocketmq-console
+git clone --branch master --depth=1 https://github.com/apache/rocketmq-externals.git
 
+cd rocketmq-externals/rocketmq-console/
+
+#mvn clean package -Dmaven.test.skip=true docker:build
+#docker tag styletang/rocketmq-console-ng huiwq1990/rocketmq-console-ng 
+
+mvn clean package -Dmaven.test.skip=true
 
 cat<<EOF > Dockerfile
 FROM openjdk:8-jdk
 VOLUME /tmp
-ADD rocketmq-console-ng-*.jar rocketmq-console-ng.jar
+ADD target/rocketmq-console-ng-*.jar rocketmq-console-ng.jar
 RUN sh -c 'touch /rocketmq-console-ng.jar'
 ENV JAVA_OPTS=""
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar /rocketmq-console-ng.jar" ]
@@ -20,5 +26,26 @@ EOF
 
 docker build -t huiwq1990/rocketmq-console-ng .
 
+docker push huiwq1990/rocketmq-console-ng
+
+
+
+
+
+docker pull styletang/rocketmq-console-ng
+
+
+
+docker run -v /tmp/rocketmq-console:/tmp styletang/rocketmq-console-ng cp /rocketmq-console-ng.jar /tmp
+
+
+
 
 https://github.com/apache/rocketmq-externals/tree/master/rocketmq-console
+
+
+
+
+
+
+ docker run -m 1GB  openjdk:8-jdk java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2 -XshowSettings:vm -version
